--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 ehthumbs.db
 Thumbs.db
 
-# Python comp files  #
-######################
+# project files #
+#################
 *.pyc
+*.sqlite
+*.dcm
+*.dicom
